--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rxjs": "^7.4.0",
+    "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.1"
   }
 }
