--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vaporwave-chess",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rbouissey.github.io/vaporwave-chess/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
